--- a/wxGUI/wxGUI.vcxproj.filters
+++ b/wxGUI/wxGUI.vcxproj.filters
@@ -119,5 +119,21 @@
     <ClInclude Include="FileTreeModel.h">
       <Filter>Source Files\GUI</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="EntityHero.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Papirus-Team-Papirus-Apps-Freeciv-server.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
