--- a/wxGUI/wxGUI.vcxproj
+++ b/wxGUI/wxGUI.vcxproj
@@ -220,21 +220,31 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../wxWidget/lib/vc_x64_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>wxscintilla.lib;wxmsw31u_stc.lib;wxbase31u.lib;wxtiff.lib;wxjpeg.lib;wxpng.lib;wxzlib.lib;wxregexu.lib;wxexpat.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;shlwapi.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;version.lib;wsock32.lib;wininet.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wxscintilla.lib;wxmsw31u_stc.lib;wxmsw31u_core.lib;wxbase31u.lib;wxtiff.lib;wxjpeg.lib;wxpng.lib;wxzlib.lib;wxregexu.lib;wxexpat.lib;kernel32.lib;user32.lib;gdi32.lib;comdlg32.lib;winspool.lib;winmm.lib;shell32.lib;shlwapi.lib;comctl32.lib;ole32.lib;oleaut32.lib;uuid.lib;rpcrt4.lib;advapi32.lib;version.lib;wsock32.lib;wininet.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\RPCInterface\meathook_interface_c.c" />
     <ClCompile Include="..\RPCInterface\mhclient.cpp" />
-    <ClCompile Include="dataview.cpp" />
+    <ClCompile Include="dataview.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ConsoleTest|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ConsoleTest|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Dialogs.cpp" />
-    <ClCompile Include="edit.cpp" />
+    <ClCompile Include="edit.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ConsoleTest|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ConsoleTest|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="EntityDataBase.cpp" />
     <ClCompile Include="EventDescription.cpp" />
-    <ClCompile Include="FileTreeModel.cpp" />
+    <ClCompile Include="FileTreeModel.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ConsoleTest|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="idMapExtract.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="entityviewmodel.cpp" />
+    <ClCompile Include="entityviewmodel.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ConsoleTest|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="prefs.cpp" />
     <ClCompile Include="ResourcesParser.cpp" />
   </ItemGroup>
