--- a/wxGUI/wxGUI.vcxproj.filters
+++ b/wxGUI/wxGUI.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="EntityDataBase.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
+    <ClCompile Include="UnitTest.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\rapidjson\allocators.h">
